--- a/src/app/pages/account/account.component.html
+++ b/src/app/pages/account/account.component.html
@@ -1,52 +1,49 @@
-<div class="mb-4 border-b border-gray-200 dark:border-gray-700">
-  <ul
-    class="flex flex-wrap -mb-px text-sm font-medium text-center"
-    id="default-tab"
-    data-tabs-toggle="#default-tab-content"
-    role="tablist"
-  >
-    <li class="me-2" role="presentation">
-      <button
-        class="inline-block p-4 border-b-2 rounded-t-lg"
-        id="profile-tab"
-        data-tabs-target="#profile"
-        type="button"
-        role="tab"
-        aria-controls="profile"
-        aria-selected="false"
-      >
-        Perfil Generales
-      </button>
-    </li>
-    <li class="me-2" role="presentation">
-      <button
-        class="inline-block p-4 border-b-2 rounded-t-lg hover:text-gray-600 hover:border-gray-300 dark:hover:text-gray-300"
-        id="dashboard-tab"
-        data-tabs-target="#dashboard"
-        type="button"
-        role="tab"
-        aria-controls="dashboard"
-        aria-selected="false"
-      >
-        Seguridad y privacidad
-      </button>
-    </li>
-  </ul>
-</div>
-<div id="default-tab-content">
+<div class="p-2 md:px-20 space-y-4">
+  <div class="mb-4 border-b border-gray-200 dark:border-gray-700">
+    <ul
+      class="flex flex-wrap -mb-px text-sm font-medium text-center text-gray-500 dark:text-gray-400"
+      role="tablist"
+    >
+      <li class="me-2" role="presentation">
+        <button
+          (click)="selectedTab = 'select-profile'"
+          [ngClass]="
+            selectedTab === 'select-profile'
+              ? 'inline-block p-4 text-purple-600 border-b-2 border-purple-600 rounded-t-lg active dark:text-purple-500 dark:border-purple-500'
+              : 'inline-block p-4 border-b-2 border-transparent rounded-t-lg hover:text-gray-600 hover:border-gray-300 dark:hover:text-gray-300'
+          "
+          type="button"
+          role="tab"
+        >
+          Verificar informacion
+        </button>
+      </li>
+      <li class="me-2" role="presentation">
+        <button
+          (click)="selectedTab = 'select-privacity'"
+          [ngClass]="
+            selectedTab === 'select-privacity'
+              ? 'inline-block p-4 text-purple-600 border-b-2 border-purple-600 rounded-t-lg active dark:text-purple-500 dark:border-purple-500'
+              : 'inline-block p-4 border-b-2 border-transparent rounded-t-lg hover:text-gray-600 hover:border-gray-300 dark:hover:text-gray-300'
+          "
+          type="button"
+          role="tab"
+        >
+          Verificar plan
+        </button>
+      </li>
+    </ul>
+  </div>
+
   <div
-    class="hidden p-4 rounded-lg bg-gray-50 dark:bg-gray-800"
-    id="profile"
-    role="tabpanel"
-    aria-labelledby="profile-tab"
+    *ngIf="selectedTab === 'select-profile'"
+    class="p-10 bg-white rounded-lg dark:bg-gray-800"
   >
     <tyn-profile></tyn-profile>
   </div>
   <div
-    class="hidden p-4 rounded-lg bg-gray-50 dark:bg-gray-800"
-    id="dashboard"
-    role="tabpanel"
-    aria-labelledby="dashboard-tab"
+    *ngIf="selectedTab === 'select-privacity'"
+    class="p-4 bg-white rounded-lg dark:bg-gray-800"
   >
     <tyn-security-privacity />
   </div>
