--- a/src/app/pages/account/profile/profile.component.html
+++ b/src/app/pages/account/profile/profile.component.html
@@ -213,10 +213,8 @@
   <button
     type="submit"
     [disabled]="!myForm.valid"
-    class="text-white btn-primary bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-sm w-full sm:w-auto px-5 py-2.5 text-center dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800"
+    class="text-white btn-primary bg-blue-700 my-2 hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-sm w-full sm:w-auto px-5 py-2.5 text-center dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800"
   >
     Solicitar demo
   </button>
 </form>
-<span>Error en name</span>
-<pre>{{ myForm.controls["birthdate"].errors | json }}</pre>
