--- a/src/app/pages/admin/panel-page/panel-page.component.html
+++ b/src/app/pages/admin/panel-page/panel-page.component.html
@@ -1,116 +1,171 @@
 <div class="flex flex-col min-h-screen p-4">
   <div class="flex items-center justify-between mb-6">
-    <h1 class="text-2xl font-semibold text-gray-900 dark:text-white">Panel de Control</h1>
+    <h1 class="text-2xl font-semibold text-gray-900 dark:text-white">
+      Panel de Control
+    </h1>
   </div>
-  <div class="grid grid-cols-2 lg:grid-cols-3 xl:grid-cols-4 2xl:grid-cols-5  gap-4 mb-6">
-    <div class="bg-white border border-gray-200 rounded-lg shadow-sm dark:bg-gray-800 dark:border-gray-700 p-4 md:p-6">
-      <h5 class="text-xl font-bold leading-none text-gray-900 dark:text-white">Nuevos usuarios</h5>
-      <p class="text-gray-600 dark:text-gray-400 my-2"> 450</p>
+  <div
+    class="grid grid-cols-2 lg:grid-cols-3 xl:grid-cols-4 2xl:grid-cols-5 gap-4 mb-6"
+  >
+    <div
+      class="bg-white border border-gray-200 rounded-lg shadow-sm dark:bg-gray-800 dark:border-gray-700 p-4 md:p-6"
+    >
+      <h5 class="text-xl font-bold leading-none text-gray-900 dark:text-white">
+        Nuevos usuarios
+      </h5>
+      <p class="text-gray-600 dark:text-gray-400 my-2">450</p>
       <div class="md:flex items-center justify-between">
         <div class="flex items-center">
-          <svg class="w-6 h-6 text-green-600 dark:text-green-400" aria-hidden="true" xmlns="http://www.w3.org/2000/svg"
-            width="24" height="24" fill="none" viewBox="0 0 24 24">
-            <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
-              d="M12 6v13m0-13 4 4m-4-4-4 4" />
+          <svg
+            class="w-6 h-6 text-green-600 dark:text-green-400"
+            aria-hidden="true"
+            xmlns="http://www.w3.org/2000/svg"
+            width="24"
+            height="24"
+            fill="none"
+            viewBox="0 0 24 24"
+          >
+            <path
+              stroke="currentColor"
+              stroke-linecap="round"
+              stroke-linejoin="round"
+              stroke-width="2"
+              d="M12 6v13m0-13 4 4m-4-4-4 4"
+            />
           </svg>
           <p class="w-6 h-6 text-green-600 dark:text-green-400">20%</p>
         </div>
-        <p class=" text-gray-600 dark:text-gray-400 md:text-right"> Desde el mes pasado</p>
+        <p class="text-gray-600 dark:text-gray-400 md:text-right">
+          Desde el mes pasado
+        </p>
       </div>
     </div>
-    <div class="bg-white border border-gray-200 rounded-lg shadow-sm dark:bg-gray-800 dark:border-gray-700 p-4 md:p-6">
-      <h5 class="text-xl font-bold leading-none text-gray-900 dark:text-white">Ganancias netas</h5>
+    <div
+      class="bg-white border border-gray-200 rounded-lg shadow-sm dark:bg-gray-800 dark:border-gray-700 p-4 md:p-6"
+    >
+      <h5 class="text-xl font-bold leading-none text-gray-900 dark:text-white">
+        Ganancias netas
+      </h5>
       <p class="text-gray-600 dark:text-gray-400 my-2">S/. 7.500</p>
       <div class="md:flex items-center justify-between">
         <span class="flex items-center">
-          <svg class="w-6 h-6 text-green-600 dark:text-green-400" aria-hidden="true" xmlns="http://www.w3.org/2000/svg"
-            width="24" height="24" fill="none" viewBox="0 0 24 24">
-            <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
-              d="M12 6v13m0-13 4 4m-4-4-4 4" />
+          <svg
+            class="w-6 h-6 text-green-600 dark:text-green-400"
+            aria-hidden="true"
+            xmlns="http://www.w3.org/2000/svg"
+            width="24"
+            height="24"
+            fill="none"
+            viewBox="0 0 24 24"
+          >
+            <path
+              stroke="currentColor"
+              stroke-linecap="round"
+              stroke-linejoin="round"
+              stroke-width="2"
+              d="M12 6v13m0-13 4 4m-4-4-4 4"
+            />
           </svg>
           <p class="w-6 h-6 text-green-600 dark:text-green-400">15%</p>
         </span>
-        <p class=" text-gray-600 dark:text-gray-400 md:text-right"> Desde el mes pasado</p>
+        <p class="text-gray-600 dark:text-gray-400 md:text-right">
+          Desde el mes pasado
+        </p>
       </div>
     </div>
-
-
   </div>
 
-  <div class="grid grid-cols-1 lg:grid-cols-3 ">
+  <div class="grid grid-cols-1 lg:grid-cols-3">
     <div
-      class="my-2 sm:mx-2 sm:col-span-1  bg-white border border-gray-200 rounded-lg shadow-sm dark:bg-gray-800 dark:border-gray-700">
-      <div class="relative overflow-x-auto ">
-        <div class="flex items-center  m-6 justify-between mb-4">
-          <h5 class="text-xl font-bold leading-none text-gray-900 dark:text-white">Roles creados</h5>
-          <a href="#" class="text-sm font-medium text-purple-600 hover:underline dark:text-purple-500">
+      class="my-2 sm:mx-2 sm:col-span-1 bg-white border border-gray-200 rounded-lg shadow-sm dark:bg-gray-800 dark:border-gray-700"
+    >
+      <div class="relative overflow-x-auto">
+        <div class="flex items-center m-6 justify-between mb-4">
+          <h5
+            class="text-xl font-bold leading-none text-gray-900 dark:text-white"
+          >
+            Roles creados
+          </h5>
+          <a
+            class="text-sm font-medium text-purple-600 hover:underline dark:text-purple-500 cursor-pointer"
+            (click)="routeLink('list-role')"
+          >
             Ver roles
           </a>
         </div>
         <div class="relative overflow-x-auto m-6">
-          <table class="w-full text-sm text-left rtl:text-right text-gray-500 dark:text-gray-400">
+          <table
+            class="w-full text-sm text-left rtl:text-right text-gray-500 dark:text-gray-400"
+          >
             <thead class="text-xs text-gray-900 uppercase dark:text-gray-400">
               <tr>
-                <th scope="col" class=" py-3">
-                  Roles
-                </th>
-                <th scope="col" class=" py-3">
-                  Cant. Us
-                </th>
+                <th scope="col" class="py-3">Roles</th>
+                <th scope="col" class="py-3">Cant. Us</th>
               </tr>
             </thead>
             <tbody>
               @for (rolList of rolList; track rolList.id) {
-              <tr class="bg-white  border-b dark:bg-gray-800 dark:border-gray-700 border-gray-200">
-                <td class=" py-4">
-                  {{rolList.name}}
+              <tr
+                class="bg-white border-b dark:bg-gray-800 dark:border-gray-700 border-gray-200"
+              >
+                <td class="py-4">
+                  {{ rolList.name }}
                 </td>
-                <td class=" py-4">
-                  {{rolList.cant}} usuarios
-                </td>
-              </tr>}
+                <td class="py-4">{{ rolList.cant }} usuarios</td>
+              </tr>
+              }
             </tbody>
           </table>
         </div>
       </div>
     </div>
     <div
-      class=" my-2 sm:mx-2 sm:col-span-2  bg-white border border-gray-200 rounded-lg shadow-sm dark:bg-gray-800 dark:border-gray-700">
-      <div class="relative overflow-x-auto ">
-        <div class="flex items-center  m-6 justify-between mb-4">
-          <h5 class="text-xl font-bold leading-none text-gray-900 dark:text-white">Ultimas acciones de usuarios</h5>
-          <a href="#" class="text-sm font-medium text-purple-600 hover:underline dark:text-purple-500">
+      class="my-2 sm:mx-2 sm:col-span-2 bg-white border border-gray-200 rounded-lg shadow-sm dark:bg-gray-800 dark:border-gray-700"
+    >
+      <div class="relative overflow-x-auto">
+        <div class="flex items-center m-6 justify-between mb-4">
+          <h5
+            class="text-xl font-bold leading-none text-gray-900 dark:text-white"
+          >
+            Ultimas acciones de usuarios
+          </h5>
+          <a
+            class="text-sm font-medium text-purple-600 hover:underline dark:text-purple-500 cursor-pointer"
+            (click)="routeLink('list-actions-user')"
+          >
             Ver todas las acciones
           </a>
         </div>
         <div class="relative overflow-x-auto m-6">
-          <table class="w-full text-sm text-left rtl:text-right text-gray-500 dark:text-gray-400">
+          <table
+            class="w-full text-sm text-left rtl:text-right text-gray-500 dark:text-gray-400"
+          >
             <thead class="text-xs text-gray-900 uppercase dark:text-gray-400">
               <tr>
-                <th scope="col" class=" py-3">
-                  Nombre rol
-                </th>
-                <th scope="col" class=" py-3">
-                  Fecha
-                </th>
-                <th scope="col" class=" py-3">
-                  Acción
-                </th>
+                <th scope="col" class="py-3">Nombre rol</th>
+                <th scope="col" class="py-3">Fecha</th>
+                <th scope="col" class="py-3">Acción</th>
               </tr>
             </thead>
             <tbody>
               @for (userAction of userAction; track userAction.id) {
-              <tr class="bg-white  border-b dark:bg-gray-800 dark:border-gray-700 border-gray-200">
-                <th scope="row" class=" py-4 font-medium text-gray-900 whitespace-nowrap dark:text-white">
-                  {{userAction.nameRol}}
+              <tr
+                class="bg-white border-b dark:bg-gray-800 dark:border-gray-700 border-gray-200"
+              >
+                <th
+                  scope="row"
+                  class="py-4 font-medium text-gray-900 whitespace-nowrap dark:text-white"
+                >
+                  {{ userAction.nameRol }}
                 </th>
-                <td class=" py-4">
-                  {{userAction.dateAction}}
+                <td class="py-4">
+                  {{ userAction.dateAction }}
                 </td>
-                <td class=" py-4">
-                  Usuario {{userAction.nameUser}} {{userAction.action}}
+                <td class="py-4">
+                  Usuario {{ userAction.nameUser }} {{ userAction.action }}
                 </td>
-              </tr>}
+              </tr>
+              }
             </tbody>
           </table>
         </div>
@@ -118,72 +173,113 @@
     </div>
   </div>
   <div class="grid grid-cols-1 lg:grid-cols-2">
-    <div class="my-2 sm:mx-2 bg-white border border-gray-200 rounded-lg shadow-sm dark:bg-gray-800 dark:border-gray-700">
-      <div class="relative overflow-x-auto ">
-        <div class="flex items-center  m-6 justify-between mb-4">
-          <h5 class="text-xl font-bold leading-none text-gray-900 dark:text-white">Usuarios conectados</h5>
-          <a href="#" class="text-sm font-medium text-purple-600 hover:underline dark:text-purple-500">
+    <div
+      class="my-2 sm:mx-2 bg-white border border-gray-200 rounded-lg shadow-sm dark:bg-gray-800 dark:border-gray-700"
+    >
+      <div class="relative overflow-x-auto">
+        <div class="flex items-center m-6 justify-between mb-4">
+          <h5
+            class="text-xl font-bold leading-none text-gray-900 dark:text-white"
+          >
+            Usuarios conectados
+          </h5>
+          <a
+            (click)="routeLink('list-user')"
+            class="text-sm font-medium text-purple-600 hover:underline dark:text-purple-500 cursor-pointer"
+          >
             Ver todos los usuarios
           </a>
         </div>
         <div class="relative overflow-x-auto m-6">
-          <table class="w-full text-sm text-left rtl:text-right text-gray-500 dark:text-gray-400">
+          <table
+            class="w-full text-sm text-left rtl:text-right text-gray-500 dark:text-gray-400"
+          >
             <thead class="text-xs text-gray-900 uppercase dark:text-gray-400">
               <tr>
-                <th scope="col" class=" py-3">
-                  Usuario
-                </th>
-                <th scope="col" class=" py-3">
-                  Rol
-                </th>
-                <th scope="col" class=" py-3">
-                  Fecha registro
-                </th>
+                <th scope="col" class="py-3">Usuario</th>
+                <th scope="col" class="py-3">Rol</th>
+                <th scope="col" class="py-3">Fecha registro</th>
               </tr>
             </thead>
             <tbody>
               @for (userConect of userConect; track userConect.id) {
-              <tr class="bg-white  border-b dark:bg-gray-800 dark:border-gray-700 border-gray-200">
-                <th scope="row" class=" py-4 font-medium text-gray-900 whitespace-nowrap dark:text-white">
-                  {{userConect.name}}
+              <tr
+                class="bg-white border-b dark:bg-gray-800 dark:border-gray-700 border-gray-200"
+              >
+                <th
+                  scope="row"
+                  class="py-4 font-medium text-gray-900 whitespace-nowrap dark:text-white"
+                >
+                  {{ userConect.name }}
                 </th>
-                <td class=" py-4">
-                  {{userConect.rol}}
+                <td class="py-4">
+                  {{ userConect.rol }}
                 </td>
-                <td class=" py-4">
-                  {{userConect.dateAction}}
+                <td class="py-4">
+                  {{ userConect.dateAction }}
                 </td>
-              </tr>}
+              </tr>
+              }
             </tbody>
           </table>
         </div>
       </div>
     </div>
-    <div class="my-2 sm:mx-2 bg-white border border-gray-200 rounded-lg shadow-sm dark:bg-gray-800 dark:border-gray-700">
-      <div class="relative overflow-x-auto ">
-        <div class="flex items-center  m-6 justify-between mb-4">
+    <div
+      class="my-2 sm:mx-2 bg-white border border-gray-200 rounded-lg shadow-sm dark:bg-gray-800 dark:border-gray-700"
+    >
+      <div class="relative overflow-x-auto">
+        <div class="flex items-center m-6 justify-between mb-4">
           <span class="flex items-center space-x-2">
-            <svg class="w-6 h-6 text-gray-800 dark:text-white" aria-hidden="true" xmlns="http://www.w3.org/2000/svg"
-              width="24" height="24" fill="none" viewBox="0 0 24 24">
-              <path fill="currentColor" d="M4 19v2c0 .5523.44772 1 1 1h14c.5523 0 1-.4477 1-1v-2H4Z" />
-              <path fill="currentColor" fill-rule="evenodd"
+            <svg
+              class="w-6 h-6 text-gray-800 dark:text-white"
+              aria-hidden="true"
+              xmlns="http://www.w3.org/2000/svg"
+              width="24"
+              height="24"
+              fill="none"
+              viewBox="0 0 24 24"
+            >
+              <path
+                fill="currentColor"
+                d="M4 19v2c0 .5523.44772 1 1 1h14c.5523 0 1-.4477 1-1v-2H4Z"
+              />
+              <path
+                fill="currentColor"
+                fill-rule="evenodd"
                 d="M9 3c0-.55228.44772-1 1-1h8c.5523 0 1 .44772 1 1v3c0 .55228-.4477 1-1 1h-2v1h2c.5096 0 .9376.38314.9939.88957L19.8951 17H4.10498l.90116-8.11043C5.06241 8.38314 5.49047 8 6.00002 8H12V7h-2c-.55228 0-1-.44772-1-1V3Zm1.01 8H8.00002v2.01H10.01V11Zm.99 0h2.01v2.01H11V11Zm5.01 0H14v2.01h2.01V11Zm-8.00998 3H10.01v2.01H8.00002V14ZM13.01 14H11v2.01h2.01V14Zm.99 0h2.01v2.01H14V14ZM11 4h6v1h-6V4Z"
-                clip-rule="evenodd" />
+                clip-rule="evenodd"
+              />
             </svg>
 
-            <h5 class="text-xl font-bold leading-none text-gray-900 dark:text-white">Ganancias</h5>
+            <h5
+              class="text-xl font-bold leading-none text-gray-900 dark:text-white"
+            >
+              Ganancias
+            </h5>
           </span>
-          <a href="#" class="text-sm font-medium text-purple-600 hover:underline dark:text-purple-500">
+          <a
+            href="#"
+            class="text-sm font-medium text-purple-600 hover:underline dark:text-purple-500"
+          >
             Ver ganancias
           </a>
         </div>
         <div class="grid grid-cols-2 gap-4 m-6">
           @for (item of ganancias; track $index) {
-          <div class="bg-white border border-gray-200 rounded-lg shadow-sm dark:bg-gray-800 dark:border-gray-700 p-4 md:p-6">
-            <h5 class="text-base font-bold leading-none text-gray-900 dark:text-white">Plan {{item.plan}}</h5>
-            <p class="text-gray-600 dark:text-gray-400 my-2">S/. {{item.cant}}</p>
-          </div>}
-
+          <div
+            class="bg-white border border-gray-200 rounded-lg shadow-sm dark:bg-gray-800 dark:border-gray-700 p-4 md:p-6"
+          >
+            <h5
+              class="text-base font-bold leading-none text-gray-900 dark:text-white"
+            >
+              Plan {{ item.plan }}
+            </h5>
+            <p class="text-gray-600 dark:text-gray-400 my-2">
+              S/. {{ item.cant }}
+            </p>
+          </div>
+          }
         </div>
       </div>
     </div>
