--- a/src/app/pages/admin/list-actions-user-page/list-actions-user-page.component.html
+++ b/src/app/pages/admin/list-actions-user-page/list-actions-user-page.component.html
@@ -1,1 +1,154 @@
-<p>list-actions-user-page works!</p>,
+<div class="relative overflow-x-auto shadow-md sm:rounded-lg px-10">
+  <div class="mb-6 text-gray-900 dark:text-white">
+    <h1 class="text-2xl font-semibold">Registro de acciones del usuario</h1>
+  </div>
+  <!-- Búsqueda general -->
+  <div class="flex items-center justify-between pb-4">
+    <div class="relative">
+      <div
+        class="absolute inset-y-0 start-0 flex items-center ps-3 pointer-events-none"
+      >
+        <svg
+          class="w-4 h-4 text-gray-500 dark:text-gray-400"
+          aria-hidden="true"
+          xmlns="http://www.w3.org/2000/svg"
+          fill="none"
+          viewBox="0 0 20 20"
+        >
+          <path
+            stroke="currentColor"
+            stroke-linecap="round"
+            stroke-linejoin="round"
+            stroke-width="2"
+            d="m19 19-4-4m0-7A7 7 0 1 1 1 8a7 7 0 0 1 14 0Z"
+          />
+        </svg>
+      </div>
+      <input
+        type="text"
+        [(ngModel)]="search"
+        placeholder="Palabra clave"
+        class="block w-full p-2.5 ps-10 text-sm text-gray-900 border border-gray-300 rounded-lg bg-gray-50 focus:ring-purple-500 focus:border-purple-500 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-purple-500 dark:focus:border-purple-500"
+      />
+    </div>
+    <div class="flex items-center">
+      <span class="mx-4 text-gray-500">Fechas</span>
+      <input
+        type="date"
+        [(ngModel)]="startDate"
+        placeholder="Fecha desde"
+        class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-purple-500 focus:border-purple-500 block w-full p-2 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-purple-500 dark:focus:border-purple-500"
+      />
+      <span class="mx-4 text-gray-500">al</span>
+      <input
+        type="date"
+        [(ngModel)]="endDate"
+        placeholder="Fecha hasta"
+        class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-purple-500 focus:border-purple-500 block w-full p-2 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-purple-500 dark:focus:border-purple-500"
+      />
+    </div>
+  </div>
+
+  <table
+    class="w-full text-sm text-left rtl:text-right text-gray-500 dark:text-gray-400"
+  >
+    <thead
+      class="text-xs text-gray-700 uppercase bg-gray-50 dark:bg-gray-700 dark:text-gray-400"
+    >
+      <tr>
+        <th scope="col" class="px-6 py-3 text-center">Rol</th>
+        <th scope="col" class="px-6 py-3 text-center">Usuario</th>
+        <th scope="col" class="px-6 py-3 text-center">Fecha</th>
+        <th scope="col" class="px-6 py-3 text-center">Modulo</th>
+        <th scope="col" class="px-6 py-3 text-center">Acción</th>
+      </tr>
+    </thead>
+    <tbody>
+      @for (item of paginatedData; track item.id) {
+      <tr
+        class="bg-white border-b dark:bg-gray-800 dark:border-gray-700 border-gray-200 hover:bg-gray-50 dark:hover:bg-gray-600"
+      >
+        <th class="px-6 py-4">{{ item.rol }}</th>
+        <td
+          scope="row"
+          class="px-6 py-4 font-medium text-gray-900 whitespace-nowrap dark:text-white"
+        >
+          {{ item.nameUser }}<br />
+        </td>
+        <td class="px-6 py-4">{{ item.dateAction }}</td>
+        <td class="px-6 py-4">{{ item.module }}</td>
+        <td class="px-6 py-4">{{ item.action }}</td>
+      </tr>
+      }
+    </tbody>
+  </table>
+  <!-- Paginación -->
+  <nav aria-label="Page navigation example " class="my-6 flex justify-center">
+    <ul class="flex items-center -space-x-px h-8 text-sm">
+      <li>
+        <button
+          (click)="prevPage()"
+          [disabled]="currentPage === 1"
+          class="flex items-center justify-center px-3 h-8 ms-0 leading-tight text-gray-500 bg-white border border-e-0 border-gray-300 rounded-s-lg hover:bg-gray-100 hover:text-gray-700 dark:bg-gray-800 dark:border-gray-700 dark:text-gray-400 dark:hover:bg-gray-700 dark:hover:text-white"
+        >
+          <span class="sr-only">Previous</span>
+          <svg
+            class="w-2.5 h-2.5 rtl:rotate-180"
+            aria-hidden="true"
+            xmlns="http://www.w3.org/2000/svg"
+            fill="none"
+            viewBox="0 0 6 10"
+          >
+            <path
+              stroke="currentColor"
+              stroke-linecap="round"
+              stroke-linejoin="round"
+              stroke-width="2"
+              d="M5 1 1 5l4 4"
+            />
+          </svg>
+        </button>
+      </li>
+      <!-- Números de página generados dinámicamente -->
+      <li *ngFor="let page of [].constructor(totalPages()); let i = index">
+        <button
+          (click)="setPage(i + 1)"
+          [ngClass]="{
+            'z-10 text-purple-600 border-purple-400 bg-purple-300 hover:bg-purple-100 hover:text-purple-700 dark:border-gray-700 dark:bg-gray-700 dark:text-white':
+              currentPage === i + 1,
+            'text-gray-500 bg-white border border-gray-300 hover:bg-gray-100 hover:text-gray-700 dark:bg-gray-800 dark:border-gray-700 dark:text-gray-400 dark:hover:bg-gray-700 dark:hover:text-white':
+              currentPage !== i + 1
+          }"
+          class="flex items-center justify-center px-3 h-8 leading-tight border"
+        >
+          {{ i + 1 }}
+        </button>
+      </li>
+
+      <li>
+        <button
+          (click)="nextPage()"
+          [disabled]="currentPage === totalPages()"
+          class="flex items-center justify-center px-3 h-8 leading-tight text-gray-500 bg-white border border-gray-300 rounded-e-lg hover:bg-gray-100 hover:text-gray-700 dark:bg-gray-800 dark:border-gray-700 dark:text-gray-400 dark:hover:bg-gray-700 dark:hover:text-white"
+        >
+          <span class="sr-only">Next</span>
+          <svg
+            class="w-2.5 h-2.5 rtl:rotate-180"
+            aria-hidden="true"
+            xmlns="http://www.w3.org/2000/svg"
+            fill="none"
+            viewBox="0 0 6 10"
+          >
+            <path
+              stroke="currentColor"
+              stroke-linecap="round"
+              stroke-linejoin="round"
+              stroke-width="2"
+              d="m1 9 4-4-4-4"
+            />
+          </svg>
+        </button>
+      </li>
+    </ul>
+  </nav>
+</div>
